Fixing remove button on mobile

--- a/src/styles/components/_btn.scss
+++ b/src/styles/components/_btn.scss
@@ -16,7 +16,10 @@
 
 .btn--secondary-inline {
 	background: #888;
-	position: relative;
-	top: -$l-font-size - (2 * $s-size) - $m-size;
-	float: right;
+	margin-bottom: $m-size;
+	@media (min-width: $desktop-breakpoint) {
+		position: relative;
+		top: -$l-font-size - (2 * $s-size) - $m-size;
+		float: right;
+	}
 }
